# LearnNotes

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
build_tool/: install.sh
config/: demo.yaml
src/learn-github/: main.py
src/my_tools/ai_for_english/: __init__.py  preprecess.py
test/: test.py
